<resources>
    <string name="app_name">直播主播端</string>
    <string name="home_page">首页</string>
    <string name="friends">联系人</string>
    <string name="mine">我</string>
    <string name="login_title">开始登陆</string>
    <string name="todo">TODO</string>
    <string name="input_username">账号</string>
    <string name="input_password">密码</string>
    <string name="go_login">登陆</string>
    <string name="register">注册</string>
    <string name="go_register">还没有账号？去注册一个</string>
    <string name="home_bottom_text_1">首页</string>
    <string name="input_phone_hint">请输入手机号</string>
    <string name="reg_title_tips">输入手机号开始注册</string>
    <string name="next_setp">下一步</string>
    <string name="input_nickname">昵称</string>
    <string name="input_nickname_hint">请输入昵称</string>
    <string name="send_code">发送</string>
    <string name="input_code">请输入验证码</string>
    <string name="please_input_content">请输入%s</string>
    <string name="password">密码</string>
    <string name="veri_code">验证码</string>
    <string name="input_pwd_o">请输入密码</string>
    <string name="input_pwd_t">请再次输入密码</string>
    <string name="home_bottom_colunm">栏目</string>
    <string name="home_bottom_dynamics">动态</string>
    <string name="home_bottom_mine">我的</string>
    <string name="load_more_tips">正在加载，请稍后</string>
    <string name="network_error">网络错误，点击重试</string>
    <string name="history_record">历史记录</string>
    <string name="download_manager">下载管理</string>
    <string name="live_center">直播中心</string>
    <string name="content_service">联系客服</string>
    <string name="youth_model">青少年模式</string>
    <string name="setting">设置</string>
    <string name="theme">主题</string>
    <string name="input_search_hint_everything">请输入搜索内容</string>
    <string name="test1">我的大会员</string>
    <string name="test2">点击查看所有权益</string>
    <string name="test3">开通后即可畅看番剧国创</string>
    <string name="login_tips_1">登陆后有新天地</string>
    <string name="login_tips_2">让您体验私人订制</string>
    <string name="night_model">夜间</string>
    <string name="camera_live">摄像直播</string>
    <string name="broadcast_live">录屏直播</string>
    <string name="voice_live">语音直播</string>
    <string name="room_title">房间标题</string>
    <string name="room_title_hint">请输入房间标题</string>
    <string name="upload_live_cover">上传封面</string>
    <string name="click_change_bg">点击更换直播背景图</string>
    <string name="start_live">开始直播</string>
    <string name="live_agreement">开始直播即代表已经同意《直播协议》，请勿上传和直播色情，暴力，反动内容</string>
    <string name="sure">确定</string>
    <string name="beauty">磨皮</string>
    <string name="filter">滤镜</string>
    <string name="exposure">曝光度</string>
    <string name="share">分享</string>
    <string name="refreshing">清爽</string>
    <string name="natural">自然</string>
    <string name="restoring">复古</string>
    <string name="tender">温柔</string>
    <string name="nostalgia">怀旧</string>
    <string name="clean">干净</string>
    <string name="healthy">健康</string>
    <string name="whitening">美白</string>
    <string name="register_account">注册账号</string>
    <string name="forgot_password">忘记密码</string>
    <string name="update_password">修改密码</string>
    <string name="upload_img_error">上传图片出错</string>
    <string name="upload_img_success">上传图片成功</string>
    <string name="service_error">服务器异常</string>
    <string name="subscribe">关注</string>
    <string name="phone_password_login">手机号密码登录</string>
    <string name="delete">删除</string>
    <string name="matters_tips">登录即表明同意<a>用户协议</a>和<a>隐私政策</a></string>

    <string name="ready_live">准备直播</string>

    <string name="reversal">反转</string>
    <string name="beauty_white">美化</string>
    <string name="shop">商品</string>
    <string name="change_cover">更换封面</string>
    <string name="not_filter">无</string>


    <string name="origin">原图</string>
    <string name="bailiang_1">白亮 1</string>
    <string name="bailiang_2">白亮 2</string>
    <string name="bailiang_3">白亮 3</string>
    <string name="bailiang_4">白亮 4</string>
    <string name="bailiang_5">白亮 5</string>
    <string name="bailiang_6">白亮 6</string>
    <string name="bailiang_7">白亮 7</string>
    <string name="fennen_1">粉嫩 1</string>
    <string name="fennen_2">粉嫩 2</string>
    <string name="fennen_3">粉嫩 3</string>
    <string name="fennen_5">粉嫩 5</string>
    <string name="fennen_6">粉嫩 6</string>
    <string name="fennen_7">粉嫩 7</string>
    <string name="fennen_8">粉嫩 8</string>
    <string name="xiaoqingxin_1">小清新 1</string>
    <string name="xiaoqingxin_3">小清新 3</string>
    <string name="xiaoqingxin_4">小清新 4</string>
    <string name="xiaoqingxin_6">小清新 6</string>
    <string name="lengsediao_1">冷色调 1</string>
    <string name="lengsediao_2">冷色调 2</string>
    <string name="lengsediao_3">冷色调 3</string>
    <string name="lengsediao_4">冷色调 4</string>
    <string name="lengsediao_7">冷色调 7</string>
    <string name="lengsediao_8">冷色调 8</string>
    <string name="lengsediao_11">冷色调 11</string>
    <string name="nuansediao_1">暖色调 1</string>
    <string name="nuansediao_2">暖色调 2</string>
    <string name="gexing_1">个性 1</string>
    <string name="gexing_2">个性 2</string>
    <string name="gexing_3">个性 3</string>
    <string name="gexing_4">个性 4</string>
    <string name="gexing_5">个性 5</string>
    <string name="gexing_7">个性 7</string>
    <string name="gexing_10">个性 10</string>
    <string name="gexing_11">个性 11</string>
    <string name="heibai_1">黑白 1</string>
    <string name="heibai_2">黑白 2</string>
    <string name="heibai_3">黑白 3</string>
    <string name="heibai_4">黑白 4</string>
    <string name="ziran_1">自然 1</string>
    <string name="ziran_2">自然 2</string>
    <string name="ziran_3">自然 3</string>
    <string name="ziran_4">自然 4</string>
    <string name="ziran_5">自然 5</string>
    <string name="ziran_6">自然 6</string>
    <string name="ziran_7">自然 7</string>
    <string name="ziran_8">自然 8</string>
    <string name="zhiganhui_1">质感灰 1</string>
    <string name="zhiganhui_2">质感灰 2</string>
    <string name="zhiganhui_3">质感灰 3</string>
    <string name="zhiganhui_4">质感灰 4</string>
    <string name="zhiganhui_5">质感灰 5</string>
    <string name="zhiganhui_6">质感灰 6</string>
    <string name="zhiganhui_7">质感灰 7</string>
    <string name="zhiganhui_8">质感灰 8</string>
    <string name="mitao_1">蜜桃 1</string>
    <string name="mitao_2">蜜桃 2</string>
    <string name="mitao_3">蜜桃 3</string>
    <string name="mitao_4">蜜桃 4</string>
    <string name="mitao_5">蜜桃 5</string>
    <string name="mitao_6">蜜桃 6</string>
    <string name="mitao_7">蜜桃 7</string>
    <string name="mitao_8">蜜桃 8</string>

    <string name="reset">重置</string>
    <string name="blur_white">磨皮</string>
    <string name="mei_bai">美白</string>
    <string name="thin_face">瘦脸</string>
    <string name="thin_nose">瘦鼻</string>
    <string name="big_eyes">大眼</string>
    <string name="qu_dou">祛痘</string>
    <string name="current_status">当前状态: </string>
    <string name="liveing_on">正在直播</string>
    <string name="not_live">未开播</string>
    <string name="say_thing">说些什么吧</string>
    <string name="cancel">取消</string>
    <string name="search">搜索</string>
    <string name="tips">提示</string>
    <string name="sending">正在发送分享信息</string>

</resources>