<?xml version="1.0" encoding="utf-8"?>
<RadioGroup android:id="@+id/filter_group"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/limit_size_60dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:bl_corners_radius="@dimen/limit_size_5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RadioButton
        android:id="@+id/filter_refreshing"
        android:layout_width="@dimen/limit_size_40dp"
        android:layout_height="@dimen/limit_size_30dp"
        android:background="@drawable/filter_bg"
        android:textStyle="bold"
        android:textColor="@color/theme_color_bili"
        android:text="@string/refreshing"
        android:button="@null"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_margin="@dimen/limit_size_10dp"
        />
    <RadioButton
        android:id="@+id/filter_natural"
        android:layout_width="@dimen/limit_size_40dp"
        android:layout_height="@dimen/limit_size_30dp"
        android:background="@drawable/filter_bg"
        android:textStyle="bold"
        android:textColor="@color/theme_color_bili"
        android:text="@string/natural"
        android:button="@null"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/limit_size_10dp"
        />
    <RadioButton
        android:id="@+id/filter_restoring"
        android:layout_width="@dimen/limit_size_40dp"
        android:layout_height="@dimen/limit_size_30dp"
        android:background="@drawable/filter_bg"
        android:textStyle="bold"
        android:textColor="@color/theme_color_bili"
        android:text="@string/restoring"
        android:button="@null"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/limit_size_10dp"
        />
    <RadioButton
        android:id="@+id/filter_tender"
        android:layout_width="@dimen/limit_size_40dp"
        android:layout_height="@dimen/limit_size_30dp"
        android:background="@drawable/filter_bg"
        android:textStyle="bold"
        android:textColor="@color/theme_color_bili"
        android:text="@string/tender"
        android:button="@null"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/limit_size_10dp"
        />
    <RadioButton
        android:id="@+id/filter_nostalgia"
        android:layout_width="@dimen/limit_size_40dp"
        android:layout_height="@dimen/limit_size_30dp"
        android:background="@drawable/filter_bg"
        android:textStyle="bold"
        android:textColor="@color/theme_color_bili"
        android:text="@string/nostalgia"
        android:button="@null"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/limit_size_10dp"
        />
    <RadioButton
        android:id="@+id/filter_clean"
        android:layout_width="@dimen/limit_size_40dp"
        android:layout_height="@dimen/limit_size_30dp"
        android:background="@drawable/filter_bg"
        android:textStyle="bold"
        android:textColor="@color/theme_color_bili"
        android:text="@string/clean"
        android:button="@null"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/limit_size_10dp"
        />
    <RadioButton
        android:id="@+id/filter_healthy"
        android:layout_width="@dimen/limit_size_40dp"
        android:layout_height="@dimen/limit_size_30dp"
        android:background="@drawable/filter_bg"
        android:textStyle="bold"
        android:textColor="@color/theme_color_bili"
        android:text="@string/healthy"
        android:button="@null"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/limit_size_10dp"
        />
    <RadioButton
        android:id="@+id/filter_whitening"
        android:layout_width="@dimen/limit_size_40dp"
        android:layout_height="@dimen/limit_size_30dp"
        android:background="@drawable/filter_bg"
        android:textStyle="bold"
        android:textColor="@color/theme_color_bili"
        android:text="@string/whitening"
        android:button="@null"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/limit_size_10dp"
        />

</RadioGroup>