<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="data"
            type="com.yb.livewy.vm.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.yb.livewy.view.LiveTitleBar
            android:id="@+id/liveTitleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:centreType="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:leftType="1"
            app:centreText="@string/register"
            app:rightType="0" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/limit_size_40dp"
            android:layout_marginLeft="@dimen/limit_size_40dp"
            android:layout_marginRight="@dimen/limit_size_40dp"
            android:visibility="gone"
            >

            <ImageView
                android:layout_width="@dimen/limit_size_30dp"
                android:layout_height="@dimen/limit_size_30dp"
                android:contentDescription="TODO"
                android:src="@drawable/ic_account_black" />

            <EditText
                android:id="@+id/nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/limit_size_10dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/input_nickname_hint"
                android:inputType="text" />
        </LinearLayout>




        <LinearLayout
            android:id="@+id/enterAnimLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/limit_size_40dp"
            android:layout_marginLeft="@dimen/limit_size_40dp"
            android:layout_marginRight="@dimen/limit_size_40dp"
            >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/limit_size_30dp"
                android:layout_height="@dimen/limit_size_30dp"
                android:contentDescription="TODO"
                android:src="@drawable/ic_account_black" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/limit_size_10dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/input_phone_hint"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/limit_size_40dp"
            android:gravity="center"
            android:layout_marginLeft="@dimen/limit_size_40dp"
            android:layout_marginRight="@dimen/limit_size_40dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/input_password"
                android:textSize="@dimen/font_size_16sp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/one_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/limit_size_10dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/input_pwd_o"
                android:inputType="textPassword"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="@dimen/limit_size_40dp"
            android:layout_marginRight="@dimen/limit_size_40dp"
            android:layout_marginLeft="@dimen/limit_size_40dp"
            >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/input_password"
                android:textSize="@dimen/font_size_16sp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/two_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/limit_size_10dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/input_pwd_t"
                android:inputType="textPassword"
                tools:ignore="MissingConstraints" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/inputCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/limit_size_40dp"
            android:layout_marginLeft="@dimen/limit_size_40dp"
            android:layout_marginRight="@dimen/limit_size_40dp"
            android:visibility="gone"
            >

            <EditText
                android:id="@+id/code_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/limit_size_20dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center"
                android:hint="@string/input_code"
                android:inputType="number" />

            <Button
                android:id="@+id/send_code"
                android:layout_width="@dimen/limit_size_60dp"
                android:layout_height="@dimen/limit_size_40dp"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/limit_size_10dp"
                android:gravity="center"
                android:text="@string/send_code"
                android:textColor="@color/white"
                app:bl_corners_radius="@dimen/limit_size_10dp"
                app:bl_pressed_solid_color="@color/theme_color_bili"
                app:bl_unPressed_solid_color="@color/theme_color_bili" />


        </LinearLayout>



        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/limit_size_220dp"
            android:layout_height="@dimen/limit_size_50dp"
            android:text="@string/register"
            android:layout_gravity="center"
            android:textColor="@color/white"
            app:bl_corners_radius="@dimen/limit_size_5dp"
            android:layout_marginTop="@dimen/limit_size_40dp"
            app:bl_pressed_solid_color="@color/theme_color_bili"
            app:bl_unPressed_solid_color="@color/theme_color_bili"
            />


    </LinearLayout>
</layout>